--- a/SCSS/ITS Theme/Alternate Checkboxes/_Default Checkbox.scss
+++ b/SCSS/ITS Theme/Alternate Checkboxes/_Default Checkbox.scss
@@ -52,7 +52,7 @@ body:not(.alt-chkbx-off) {
                 font-weight: 10;
                 border: 0;
                 vertical-align: 0px;
-                //margin-left: -2px;
+                text-align: center;
             }
          }
     }
